Name: greg-client
Version: 0.1.0
License: BSD3
License-file: LICENSE
Copyright: Eugene Kirpichov, 2010
Author: Eugene Kirpichov <ekirpichov@gmail.com>
Maintainer: Eugene Kirpichov <ekirpichov@gmail.com>
Synopsis: A scalable distributed logger with a high-precision global time axis.
Description: Haskell client to the "greg" logger (http://code.google.com/p/greg/).
Category: Logging
Cabal-Version: >= 1.6
Build-Type: Simple
Homepage: http://code.google.com/p/greg/
Source-repository head
  type: hg
  location: https://greg.googlecode.com/hg/

flag splitbase
  description: Choose the new smaller, split-up base package.

library greg-client
  if flag(splitbase)
    Build-Depends: base >= 3 && < 5
  else
    Build-Depends: base < 3

  Build-Depends: bytestring, time, binary, containers, haskell98
  Exposed-Modules: System.Log.Greg
