Name: greg-client
Version: 0.1.0
License: BSD3
License-file: LICENSE
Copyright: Eugene Kirpichov, 2010
Author: Eugene Kirpichov <ekirpichov@gmail.com>
Maintainer: Eugene Kirpichov <ekirpichov@gmail.com>
Synopsis: A scalable distributed logger with a high-precision global time axis.
Description: Haskell client to the "greg" logger (http://code.google.com/p/greg/).
Category: Logging
Cabal-Version: >= 1.6
Build-Type: Simple
Homepage: http://code.google.com/p/greg/
Source-repository head
  type: hg
  location: https://greg.googlecode.com/hg/

flag splitbase
  description: Choose the new smaller, split-up base package.

flag debug
  description: enable debugging output
  default: False

library
  if flag(splitbase)
    Build-Depends: base >= 3 && < 5
  else
    Build-Depends: base < 3

  if flag(debug)
    cpp-options: -DDEBUG

  hs-source-dirs: .
  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
  Build-Depends: bytestring, time, binary,  
                 system-uuid, hostname, network >= 2.3, clock >= 0.1.2.1, stm
  Exposed-Modules: System.Log.Greg
  Other-Modules: System.Log.PreciseClock
