Name: greg-client
Version: 1.0.2
License: BSD3
License-file: LICENSE
Copyright: Eugene Kirpichov, Dmitry Astapov 2010
Author: Eugene Kirpichov <ekirpichov@gmail.com>, Dmitry Astapov <dastapov@gmail.com>
Maintainer: Eugene Kirpichov <ekirpichov@gmail.com>, Dmitry Astapov <dastapov@gmail.com>
Synopsis: A scalable distributed logger with a high-precision global time axis.
Description: Haskell client to the \"greg\" distributed logger with a high-precision global time axis (<http://code.google.com/p/greg/>).
Category: Logging
Cabal-Version: >= 1.6
Build-Type: Simple
Homepage: http://code.google.com/p/greg/
Source-repository head
  type: git
  location: git://github.com/jkff/greg.git

flag debug
  description: enable debugging output
  default: False

library
  Build-Depends: base >= 4 && < 5

  if flag(debug)
    cpp-options: -DDEBUG

  hs-source-dirs: .
  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-orphans
  Build-Depends: bytestring, time, binary,  
                 system-uuid, hostname, network, clock >= 0.1.2.1, stm
  Exposed-Modules: System.Log.Greg
  Other-Modules: System.Log.PreciseClock
